Fixing button alignment bugs in admin tables

--- a/code/media/koowa/com_koowa/scss/koowa/admin/_table.scss
+++ b/code/media/koowa/com_koowa/scss/koowa/admin/_table.scss
@@ -47,6 +47,15 @@
       background: $btnPrimaryBackground;
     }
 
+    tr, td {
+      vertical-align: middle;
+
+      .btn-mini {
+        padding-top: 3px;
+        padding-bottom: 3px;
+      }
+    }
+
     tr {
       td {
         border-top: 1px solid #ddd;
